# Mini-Redis

./: README.md
my-redis/: Cargo.toml  README.md  log.aof  out  test.bash
my-redis/idl/: my_redis.thrift
my-redis/src/: aof.rs  cfg_cluster.txt  cfg_ms.txt  client_part2_test.bash  client_part3_test.bash  config.txt  lib.rs  m-s.bash  read_file.rs  run.bash  test.bash
my-redis/src/log/: log-1.aof  log.aof  log_0.aof  log_1.aof  log_2.aof
my-redis/src/tools/: kill-ports.bash  rm-port.bash  test.bash
my-redis/volo-gen/: Cargo.toml  volo.yml
my-redis/volo-gen/src/: lib.rs
project/: Cargo.toml
project/src/: main.rs  read_file.rs
