[package]
name = "my_redis"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
lazy_static = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

pilota = "*"
volo =  "*"        # we recommend to use the latest framework version for new features and bug fixes
volo-thrift =  "*"  # we recommend to use the latest framework version for new features and bug fixes

volo-gen = { path = "./volo-gen" }
mini-redis = "0.4.1"

serde = { version = "1.0", features = ["derive"] }
futures = "0.3.28"
crc16 = "0.4.0"

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false

[workspace]
members = ["volo-gen"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
# we recommend to use the latest framework version for new features and bug fixes
volo = "*"
volo-build = "*"
volo-thrift = "*"
pilota = "*"

anyhow = "1"
async-trait = "0.1"
tokio = "1"

